<resources>
    <string name="app_name">IQ Booster</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="home">home</string>

    <!-- post -->
    <string name="article_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="add_picture">Add Picture</string>
    <string name="title">Title&#8230;</string>
    <string name="secondary">In a few words, tells us about your articles&#8230;</string>
    <string name="tags_description">Select at most 3 tags associated with your post:</string>

    <!-- drawer -->
    <string name="news_feed">News Feed</string>
    <string name="post">Post</string>
    <string name="collect">Collect</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_username">Welcome </string>
    <string name="drawer_email">Click Avatar to Login / Sign Up</string>
    <string name="name">name</string>

    <!-- dialog -->
    <string name="shake_title">&#127808; Feeling Lucky &#127922;</string>
    <string name="shake_pos">YAY!</string>
    <string name="shake_neg">No, Thanks</string>

    <!-- login -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_button_text">Log In</string>
    <string name="forgot_password">forgot password</string>
    <string name="forgot_password_secondary">Enter your email and we will email you a reset link</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="guest">Continue as a Guest</string>
    <string name="have_an_account">Already have an account? </string>
    <string name="login">Log In</string>
    <string name="setup_instruction">Create your account to continue!</string>
    <string name="start">Sign up</string>
    <string name="setup_name">Display Name</string>
    <string name="setup_username">username</string>
    <string name="location">Location</string>
    <string name="create_your_profile">CREATE YOUR PROFILE</string>
    <string name="select_one_as_your_avatar_or">Select one as your avatar or</string>
    <string name="upload">choose&#8230;</string>
    <string name="next">next</string>
    <string name="done">done</string>
    <string name="tap_to_choose">Tap to choose your interested areas</string>
    <string name="discover">Discover</string>
    <string name="login_page_secondary_text">Create a profile, follow other users, \nmake your posts, read posts to boost your IQ, and more.</string>
    <string name="suggestion_title">People to Follow</string>
    <string name="suggestion_secondary">suggested for you</string>

    <!-- database tags -->
    <string name="db_users">users</string>
    <string name="db_username">username</string>
    <string name="db_tags">tags</string>
    <string name="db_posts">posts</string>
    <string name="db_following_users">following_users</string>
    <string name="db_followers_users">followers_users</string>
    <string name="db_my_posts">my_posts</string>
    <string name="db_like_counts">like_counts</string>
    <string name="db_title">title</string>
    <string name="db_lower_case_title">lower_case_title</string>
    <string name="db_subTitle">subTitle</string>
    <string name="db_like_posts">like_posts</string>
    <string name="db_collect_posts">collect_posts</string>
    <string name="db_timestamp">timestamp</string>
    <string name="db_comments">comments</string>
    <string name="db_comments_reply">all_replies</string>
    <string name="db_profile_image">profile_image</string>
    <string name="db_thumbnail_image">thumbnail_image</string>
    <string name="db_device_id">device_id</string>

    <!-- tags -->
    <string name="technology">technology</string>
    <string name="sport">sport</string>
    <string name="travel">travel</string>
    <string name="food">food</string>
    <string name="psychology">psychology</string>
    <string name="health">health</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>

    <string name="hash_technology">#technology</string>
    <string name="hash_sport">#sport</string>
    <string name="hash_travel">#travel</string>
    <string name="hash_food">#food</string>
    <string name="hash_psychology">#psychology</string>
    <string name="hash_health">#health</string>
    <string name="hash_business">#business</string>
    <string name="hash_entertainment">#entertainment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- User Profile Page -->
    <string name="posts_tab">posts</string>
    <string name="follower_tab">followers</string>
    <string name="following_tab">following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Logout</string>

    <!-- Search page -->
    <string name="search_title">Search</string>
    <string name="search_by_title">Title</string>
    <string name="search_by_username">Username</string>
    <string name="search_searchText">What\'s on your mind?</string>
    <string name="search_hint">Try to Input: </string>
    <string name="search_marquee">#technology #sport #travel #psychology #health #business #entertainment</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- Firebase messaging -->
    <string name="msg_token">token %s</string>
    <string name="msg_tile">IQBooster</string>
    <string name="msg_new_follower">You have 1 new follower</string>
    <string name="msg_body_like">Your post got %d like(s).</string>
    <string name="msg_body_follow">%s started to follow you.</string>

</resources>