<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PostCreation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/post_creation_bar_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/post_creation_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18sp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_close_24" />

            <TextView
                android:id="@+id/post_creation_post_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100sp"
                android:layout_marginEnd="18sp"
                android:gravity="end"
                android:text="@string/post"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white"/>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_creation_bar_linearLayout"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/post_creation_add_image"
                    android:layout_width="match_parent"
                    android:layout_height="260sp"
                    android:background="@color/gray">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:ignore="UnusedAttribute"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/outline_add_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_picture"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:layout_marginVertical="8sp"
                    android:background="@null"
                    android:hint="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:layout_marginVertical="8sp"
                    android:background="@null"
                    android:hint="@string/secondary"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/post_creation_chipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16sp"
                        app:singleLine="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/post_creation_technology"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/technology" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/post_creation_sport"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/sport" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/post_creation_travel"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/travel" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/post_creation_food"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/food" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/post_creation_psychology"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/psychology" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/post_creation_health"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/health" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/post_creation_business"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/business" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/post_creation_entertainment"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/entertainment" />
                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:layout_marginHorizontal="16sp"
                    android:background="@null"
                    android:hint="@string/article_placeholder"
                    android:textAppearance="?attr/textAppearanceBody2" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>