<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bubblepicker_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68sp"
        android:gravity="center"
        android:text="@string/discover"
        style="@style/title_primary"
        />

    <TextView
        android:id="@+id/bubblepicker_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:lineSpacingMultiplier="1"
        android:maxLines="1"
        android:text="@string/tap_to_choose"
        style="@style/title_secondary"
        />

    <com.igalata.bubblepicker.rendering.BubblePicker
        android:id="@+id/picker"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        app:backgroundColor="@android:color/white" />

    <Button
        android:id="@+id/bubblepicker_next_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/next" />

</LinearLayout>