<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ForgetActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/forget_password_logo"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="44sp"
        android:layout_marginTop="56sp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/forget_password_header_text"
        android:layout_width="250sp"
        android:layout_height="100sp"
        android:layout_marginTop="36sp"
        android:src="@drawable/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@id/forget_password_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        style="@style/title_primary"
        android:layout_marginTop="48sp"
        app:layout_constraintBottom_toTopOf="@id/forgot_password_secondaryTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_password_header_text" />

    <TextView
        android:id="@+id/forgot_password_secondaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title_secondary"
        android:text="@string/forgot_password_secondary"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/forget_password_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:hint="@string/email_hint"
        style="@style/custom_editText"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_secondaryTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forget_password_button"
        android:layout_width="match_parent"
        style="@style/custom_bottom"
        android:background="@drawable/roundedbutton_style"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_email_editText"
        app:layout_constraintVertical_bias="0.15" />

    <ProgressBar
        android:id="@+id/forget_password_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@+id/forget_password_button"
        app:layout_constraintEnd_toEndOf="@+id/forget_password_button"
        app:layout_constraintStart_toStartOf="@+id/forget_password_button"
        app:layout_constraintTop_toTopOf="@+id/forget_password_button" />

    <TextView
        android:id="@+id/forget_password_already_have_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:text="@string/have_an_account"
        app:layout_constraintBottom_toTopOf="@+id/forget_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forget_password_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:clickable="true"
        android:layout_marginLeft="4sp"
        android:text="@string/login"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/forget_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toEndOf="@+id/forget_password_already_have_account_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>