<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.SignupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="44sp"
        android:layout_marginTop="56sp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signup_text"
        android:layout_width="250sp"
        android:layout_height="100sp"
        android:layout_marginTop="36sp"
        android:src="@drawable/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@+id/signup_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_getting_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:text="@string/start"
        style="@style/title_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_logo" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_page_secondary_text"
        android:gravity="center"
        style="@style/title_secondary"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_getting_started" />

    <EditText
        android:id="@+id/signup_email_editText"
        style="@style/custom_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_continue"
        app:layout_constraintVertical_bias="0.506" />

    <EditText
        android:id="@+id/signup_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        style="@style/custom_editText"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_editText" />

    <EditText
        android:id="@+id/signup_confirm_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        style="@style/custom_editText"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_editText" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_signup_button"
        android:layout_width="match_parent"
        style="@style/custom_bottom"
        android:background="@drawable/roundedbutton_style"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_editText"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/signup_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@+id/signup_signup_button"
        app:layout_constraintEnd_toEndOf="@+id/signup_signup_button"
        app:layout_constraintStart_toStartOf="@+id/signup_signup_button"
        app:layout_constraintTop_toTopOf="@+id/signup_signup_button"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signup_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="4sp"
        android:layout_marginEnd="8sp"
        android:clickable="true"
        android:text="@string/login"
        android:textColor="#112FD8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/already_have_account_textView"
        app:layout_constraintTop_toBottomOf="@+id/signup_signup_button" />

    <TextView
        android:id="@+id/already_have_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104sp"
        android:layout_marginTop="4sp"
        android:text="@string/have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_signup_button" />

    <ImageButton
        android:id="@+id/signup_visible_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginHorizontal="8sp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_editText"
        app:srcCompat="@drawable/baseline_visibility_24" />

    <ImageButton
        android:id="@+id/signup_invisible_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8sp"
        android:layout_marginTop="8sp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_editText"
        app:srcCompat="@drawable/baseline_visibility_off_24" />

</androidx.constraintlayout.widget.ConstraintLayout>